--- a/style.css
+++ b/style.css
@@ -75,9 +75,11 @@ body{
    
 }
 
-.container div{
+.container .container-a,
+.container .container-b,
+.container .container-c{
     width: 360px;
-    height: 560px;
+    height: 590px;
     position: absolute;
     background: var(--color-background);
     /* background-image: var(--color-surface); */
@@ -112,7 +114,13 @@ body{
     transform: rotateX(-90deg) translateZ(325px);
     
 }
-.container-a label{
+
+.container-a .direction {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+.container-a .direction label{
     position: relative;
     width: 200px;
     left: 65px;
@@ -121,7 +129,7 @@ body{
     font-size: 20px;
     height: 50px;
     line-height: 50px;
-    margin: 20px 0px;
+    /* margin: 30px 0px; */
     text-align: center;
     display: block;
     background-image: linear-gradient(45deg, #8000ff, #ff00c4);
@@ -157,7 +165,7 @@ body{
 
 }
 
-.form input{
+.container-b .form input{
     position: relative;
     width: calc(100% - 80px);
     left: 40px;
@@ -213,7 +221,8 @@ body{
     padding: var(--spacing-xl);
     border-radius: var(--border-radius);
     box-shadow: var(--shadow-lg);
-    width: 100%;
+    width: 360px;
+    height: 700px;
     max-width: 25rem;
 }
 
