--- a/css/style.css
+++ b/css/style.css
@@ -50,17 +50,20 @@
 
 
 body{
-    /* background: url('https://wallpapers.com/images/hd/3440x1440-neon-b4revhghmqdf5irf.jpg'); */
-    /* background-image: linear-gradient(45deg, #8000ff, #ff00c4); */
-    background: var(--color-background);
-    /* background-attachment: fixed;
-    background-size: cover; */
-    perspective: 1000px;
+    background: url('../assets/fundo.jpg');
+    
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    perspective: 2000px;
 
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+
+    margin: 0;
+    overflow: hidden; 
 }
 
 .container{
