--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ button:focus:not(:active)::after {
 }
 
 #feedbackMessageLogin.errorLogin {
-    background-color: var(--color-error);
+    background: var(--color-primary);
     color: var(--color-text);
 }
 
