--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -243,7 +243,7 @@ button {
   
   .done h3 {
     color: #f4eded;
-    text-decoration: line-through;
+    text-decoration: line-through black;
     font-style: italic;
   }
 
